<resources>
    <string name="app_name">Cipher</string>

    <string name="ecb">ECB</string>
    <string name="cbc">CBC</string>
    <string name="ofb">OFB</string>
    <string name="cfb">CFB</string>
    <string name="ctr">CTR</string>

    <string name="pkcs5padding">PKCS5Padding</string>
    <string name="zeropadding">ZeroPadding</string>
    <string name="nopadding">NoPadding</string>
    <string name="oaeppadding">OAEPPadding</string>
    <string name="pkcs1padding">PKCS1Padding</string>
    <string name="sslv3padding">SSL3Padding</string>

    <string name="des">DES</string>
    <string name="aes">AES</string>
    <string name="bit128">128 bit</string>
    <string name="bit192">192 bits</string>
    <string name="bit256">256 bits</string>
    <string name="bit512">512 bits</string>
    <string name="bit1024">1024 bit</string>
    <string name="bit2048">2048 bits</string>
    <string name="bit4096">4096 bits</string>

    <string name="hex">Hex</string>
    <string name="base64">Base64</string>
    <string name="ascii">ASCII</string>
    <string name="pem">PEM</string>

    <string name="gb2312">GBK/GB2312</string>
    <string name="utf8">UTF-8</string>
    <string name="utf16">UTF-16</string>
    <string name="utf16be">UTF-16BE</string>
    <string name="utf16le">UTF-16LE</string>

    <string name="title_aes">AES encryption and decryption</string>
    <string name="title_des">DES encryption and decryption</string>
    <string name="title_des_ede">3DES encryption and decryption</string>
    <string name="title_rsa_gen"> RSA key pair generation</string>
    <string name="title_rsa_private">RSA private key encryption and decryption</string>
    <string name="title_rsa_public">RSA public key encryption and decryption</string>
    <string name="title_rsa_check">RSA public and private key verification</string>

    <string name="private_key"> private key</string>
    <string name="rsa_private_encrypt"> RSA private key encryption </string>
    <string name="rsa_private_decrypt"> RSA private key decryption [decrypt the encryption corresponding to the public key]</string>
    <string name="public_key"> public key</string>
    <string name="rsa_public_encrypt"> RSA public key encryption </string>
    <string name="rsa_public_decrypt"> RSA public key decryption [decrypt the encryption corresponding to the private key]</string>

    <string name="label_iv"> Initialization vector iv:</string>
    <string name="label_key">Key:</string>
    <string name="label_iv_key_format"> iv and key encoding format:</string>
    <string name="label_rsa_gen_digit"> Generate key digits:</string>
    <string name="label_private"> private key:</string>
    <string name="label_public"> Public key:</string>
    <string name="label_encrypted_type"> ciphertext type:</string>
    <string name="label_charset"> character set:</string>
    <string name="label_input"> the text to be encrypted and decrypted:</string>
    <string name="label_input_1"> to be encrypted text:</string>
    <string name="label_output"> Encryption and decryption conversion results:</string>
    <string name="label_output_1"> encryption result:</string>

    <string name="generate"> generate</string>
    <string name="copy"> copy</string>
    <string name="check"> check</string>
    <string name="title_hash">Hash encryption</string>
    <string name="md5">MD5</string>
    <string name="sha1">SHA-1</string>
    <string name="sha256">SHA-256</string>
    <string name="sha384">SHA-384</string>
    <string name="sha512">SHA-512</string>
    <string name="hmac_md5">HMAC-MD5</string>
    <string name="hmac_sha1">HMAC-SHA-1</string>
    <string name="hmac_sha256">HMAC-SHA-256</string>
    <string name="hmac_sha384">HMAC-SHA-384</string>
    <string name="hmac_sha512">HMAC-SHA-512</string>
    <string name="title_hmac"> HMac calculation</string>
    <string name="hint_key"> please enter the key</string>
</resources>