<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/format"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:gravity="center"
            app:drawableEndCompat="@drawable/ic_down"
            tools:text="@string/pem" />

        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/check" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_private"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/private_key"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1.5"
        android:background="@drawable/shape_rectangle"
        android:padding="4dp"
        android:gravity="top|start"
        android:textIsSelectable="true"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_public"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/public_key"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:background="@drawable/shape_rectangle"
        android:padding="4dp"
        android:textIsSelectable="true"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

</LinearLayout>