<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="模式:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mode"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ecb"
                app:drawableEndCompat="@drawable/ic_down" />

            <Button
                android:id="@+id/encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="加密" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="填充:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/padding"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pkcs5padding"
                app:drawableEndCompat="@drawable/ic_down" />

            <Button
                android:id="@+id/decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="解密" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/label_iv"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="ECB模式不用填写"
                android:lines="1" />

            <TextView
                android:id="@+id/iv_format"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/hex"
                app:drawableEndCompat="@drawable/ic_down" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/label_key"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="请输入密钥" />

            <TextView
                android:id="@+id/key_format"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/hex"
                app:drawableEndCompat="@drawable/ic_down" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="密文类型:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/encrypted_format"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/base64"
                app:drawableEndCompat="@drawable/ic_down" />

            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="字符集:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/charset"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                app:drawableEndCompat="@drawable/ic_down"
                tools:text="@string/gb2312" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:text="@string/label_input"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_rectangle"
            android:gravity="start|top"
            android:minHeight="120dp"
            android:padding="4dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_output"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/clip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/copy"
                android:textColor="@color/purple_200" />

        </LinearLayout>

        <TextView
            android:id="@+id/after_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rectangle"
            android:gravity="start|top"
            android:minHeight="120dp"
            android:padding="4dp"
            android:textIsSelectable="true" />

    </LinearLayout>

</ScrollView>

