<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.HashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/label_encrypted_type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/encrypted_format"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/base64"
            app:drawableEndCompat="@drawable/ic_down" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="onClick"
            android:text="加密" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/label_charset"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/charset"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:onClick="onClick"
            app:drawableEndCompat="@drawable/ic_down"
            tools:text="@string/gb2312" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:labelFor="@id/text"
        android:text="@string/label_input_1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="120dp"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MD5: "
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/clip_md5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/copy"
            android:textColor="@color/purple_200" />

    </LinearLayout>

    <TextView
        android:id="@+id/md5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHA-1: "
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/clip_sha1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/copy"
            android:textColor="@color/purple_200" />

    </LinearLayout>

    <TextView
        android:id="@+id/sha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHA-256: "
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/clip_sha256"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/copy"
            android:textColor="@color/purple_200" />

    </LinearLayout>

    <TextView
        android:id="@+id/sha256"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHA-384: "
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/clip_sha384"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/copy"
            android:textColor="@color/purple_200" />
    </LinearLayout>


    <TextView
        android:id="@+id/sha384"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHA-512: "
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/clip_sha512"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/copy"
            android:textColor="@color/purple_200" />
    </LinearLayout>

    <TextView
        android:id="@+id/sha512"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:padding="4dp" />

</LinearLayout>